# nua-sandbox

./: .cirrus.yml  .gitignore  .libcst.codemod.yaml  .pre-commit-config.yaml  Makefile  README.md  TODO.md  noxfile.py  pyproject.toml  tasks.py
.builds/: alpine.yml  ubuntu-lts.yml
apps/abilian-sbe/: nua-config.toml
apps/ackee/: nua-config.toml
apps/adhocracy-plus/: nua-config.toml
apps/calcom/: build.sh  nua-config.toml
apps/demo-flask/: Dockerfile  nua-config.toml
apps/demos/clever-go/: nua-config.toml
apps/demos/clever-go-example/: nua-config.toml
apps/demos/nua-flask-postgresql/: pyproject.toml
apps/demos/nua-flask-sqla-postgresql/: nua-config.toml  pyproject.toml
apps/demos/railway-deno/: nua-config.toml
apps/demos/railway-django/: nua-config.toml
apps/demos/railway-fastapi/: nua-config.toml
apps/demos/railway-flask/: nua-config.toml
apps/demos/railway-gin/: nua-config.toml
apps/demos/railway-laravel/: nua-config.toml
apps/demos/railway-rails/: nua-config.toml
apps/demos/railway-rocket/: nua-config.toml
apps/demos/railway-starlette/: nua-config.toml
apps/demos/render-demo-express/: nua-config.toml
apps/demos/render-demo-flask/: nua-config.toml
apps/demos/render-demo-nextjs/: nua-config.toml
apps/demos/render-demo-rails/: nua-config.toml
apps/demos/render-demo-rocket/: nua-config.toml
apps/demos/render-demo-vuepress/: nua-config.toml
apps/demos/render-deno/: nua-config.toml
apps/demos/render-express/: nua-config.toml
apps/demos/render-flask/: nua-config.toml
apps/demos/render-nextjs/: nua-config.toml
apps/demos/render-rails/: nua-config.toml
apps/demos/render-rocket/: SKIP  nua-config.toml
apps/demos/render-sveltekit/: nua-config.toml
apps/demos/render-vuepress/: nua-config.toml
apps/etherpad-lite/: nua-config.toml
apps/formio/: nua-config.toml
apps/goodwork/: nua-config.toml
apps/hedgedoc/: nua-config.toml
apps/moodle/: nua-config.toml
apps/nuxeo/: nua-config.toml
apps/railway-django/: nua-config.toml
apps/railway-flask/: nua-config.toml
apps/railway-gin/: nua-config.toml
apps/railway-laravel/: nua-config.toml
apps/railway-rails/: SKIP  nua-config.toml
apps/railway-rocket/: nua-config.toml
apps/real-apps/abilian-sbe/: nua-config.toml
apps/real-apps/ackee/: nua-config.toml
apps/real-apps/adhocracy-plus/: nua-config.toml
apps/real-apps/cal.com/: SKIP  build.sh  nua-config.toml
apps/real-apps/demo-flask/: nua-config.toml
apps/real-apps/dittofeed/: nua-config.toml
apps/real-apps/etherpad-lite/: nua-config.toml
apps/real-apps/formio/: nua-config.toml
apps/real-apps/galene/: README.md
apps/real-apps/ghost/: nua-config.toml
apps/real-apps/goodwork/: nua-config.toml
apps/real-apps/hedgedoc/: nua-config.toml
apps/real-apps/liberaforms/: nua-config.toml
apps/real-apps/limesurvey/: nua-config.toml
apps/real-apps/matomo/: nua-config.toml
apps/real-apps/moinmoin/: SKIP  nua-config.toml
apps/real-apps/moodle/: nua-config.toml
apps/real-apps/nocodb/: nua-config.toml
apps/real-apps/nuxeo/: SKIP
apps/real-apps/peertube/: nua-config.toml
apps/real-apps/pytition/: nua-config.toml
apps/real-apps/radicale/: nua-config.toml
apps/real-apps/rocketchat/: SKIP  nua-config.toml
apps/real-apps/shynet/: nua-config.toml
apps/real-apps/status-page/: nua-config.toml
apps/real-apps/synapse/: nua-config.toml
apps/real-apps/text2quiz/: nua-config.toml
apps/render-demo-express/: nua-config.toml
apps/render-demo-nextjs/: nua-config.toml
apps/render-demo-rails/: nua-config.toml
apps/render-demo-rocket/: nua-config.toml
apps/skipped/cal.com/: build.sh  (+1 more)
apps/status-page/: nua-config.toml
apps/synapse/: nua-config.toml
apps/text2quiz/: nua-config.toml
apps/wekan/: nua-config.toml
apps/xwiki/: SKIP  nua-config.toml
base-image/: Dockerfile  README.md
base-image/apt.conf.d/: 01-no-recommend  02-no-cache
bootstrap/: nua-bootstrap.py  nua-bootstrap.sh  readme.md
bootstrap/templates/: nginx.conf.j2
doc/: image-spec.md  lifecycle.md
installer/: install.py
nua-agent/: README.md  pyproject.toml
nua-agent/nua_agent/: cli.py  setup.py  sh.py
nua-agent/src/nua_agent/: build.py  builder.py  cli.py  config.py  constants.py  main.py  setup.py  sh.py  system.py  unarchiver.py  util.py
nua-agent/src/nua_agent/builders/: __init__.py  base.py  clojure.py  go.py  gradle.py  maven.py  node.py  python.py  ruby.py  rust.py
nua-agent/src/nua_agent/profiles/: __init__.py  base.py  clojure.py  common.py  deno.py  go.py  gradle.py  maven.py  node.py  php.py  python.py  ruby.py  rust.py
nua-agent/tests/: test_cli.py
nua-bootstrap/: pyproject.toml  readme.md
nua-bootstrap/templates/: default-site.conf.j2
nua-bootstrap/templates/www/: index.html.j2
nua-build-agent/: README.md  noxfile.py  pyproject.toml  setup.cfg
nua-build-agent/src/nua_build_agent/: builder.py  cli.py  config.py  constants.py  system.py  types.py  unarchiver.py
nua-build-agent/src/nua_build_agent/profiles/: __init__.py  base.py  clojure.py  deno.py  go.py  gradle.py  manual.py  node.py  php.py  python.py  ruby.py
nua-build-agent/src/nua_build_agent/utils/: backports.py  sh.py
nua-build-agent/tests/: test_cli.py
nua-cli/: Makefile  pyproject.toml
nua-dev/: Makefile  README.md  noxfile.py  pyproject.toml  setup.cfg
nua-dev/nua_dev/: cli.py
nua-dev/src/nua_dev/: backports.py  builder.py  cli.py  config.py  console.py  main.py  sh.py  types.py  upstream.py  util.py
nua-dev/src/nua_dev/commands/: build.py  build_all.py  init.py  validate.py  validate_ng.py
nua-dev/src/nua_dev/etc/: Dockerfile  nua-config.schema.json5  nua-config.toml.j2
nua-dev/src/nua_dev/etc/build_files/: Dockerfile  nua-bootstrap-image.sh  nua-image-bootstrap.sh  nua-install-build-agent.py
nua-dev/src/nua_dev/tools/: build_all.py
nua-dev/src/nua_dev/utils/: sh.py
nua-dev/tests/: test_cli.py  test_config.py
nua-run/: Makefile  README.md  pyproject.toml  setup.cfg
nua-run/src/nua_run/: cli.py  git_cli.py  sh.py
sandbox/: buildpack-experiment.py
scripts/: build-all.py
tests/: test_all.py
(+27 files in other folders)
