[tool.poetry]
name = "nua-sandbox"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
nua-agent = { path = "nua-agent", develop = true }
nua-dev = { path = "nua-dev", develop = true }
nua-run = { path = "nua-run", develop = true }

# pyinfra = "^2.6.2"
[tool.poetry.group.dev.dependencies]
abilian-devtools = "^0.4.8"
invoke = "^2.0.0"
devtools = "^0.10.0"
watchfiles = "^0.18.1"
types-jsonschema = "^4.17.0.5"
docformatter = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "E501", # line too long
]
