[tool.poetry]
name = "nua-sandbox"
version = "0.1.1"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]
readme = "README.md"

packages = [
    { include = "e2e", from = "tests" },
]

[tool.poetry.dependencies]
python = "^3.10"

nua-build-agent = { path = "nua-build-agent", develop = true }
nua-dev = { path = "nua-dev", develop = true }
nua-run = { path = "nua-run", develop = true }

[tool.poetry.group.dev.dependencies]
abilian-devtools = "^0.5.11"
invoke = "^2.2.0"
types-jsonschema = "^4.19.0.3"
watchfiles = "^0.21.0"
docformatter = "^1.7.5"
pydeps = "^1.12.17"
devtools = "^0.12.2"

[options.packages.find]
exclude = [
    "tests",
    "tests.*",
    "doc",
    "doc.*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = [
    "E501", # line too long
    "PLR2004", # Magic value used in comparison
]
