[tool.poetry]
name = "nua-bootstrap"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]
readme = "README.md"
packages = [{include = "nua_bootstrap"}]

[tool.poetry.dependencies]
python = "^3.10"
pyinfra = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
