[tool.poetry]
name = "nua-build-agent"
version = "0.1"
description = "Nua build agent - CLI and code that runs in the containers / VMs"
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "nua_build_agent", from = "src" },
]

[tool.poetry.scripts]
nua-build-agent = "nua_build_agent.cli:main"


[tool.poetry.dependencies]
python = "^3.10"
cleez = "^0.1.11"
snoop = "^0.4.3"
#setuptools = "^67.7.2"
#jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "^0.5.2"
nox = "^2023.4.22"

# types-setuptools = "*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*distutils package:DeprecationWarning",
    "ignore::DeprecationWarning",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
lint.ignore = [
    "E501",  # line too long
]
