[tool.poetry]
name = "nua-dev"
version = "0.1.1dev"
description = "Nua Dev - cli / code that runs on the development / build machine"
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "MIT"
# readme = "README.md"
packages = [
    { include = "nua_dev", from = "src" },
]

[tool.poetry.scripts]
nua-dev = "nua_dev.cli:main"


[tool.poetry.dependencies]
python = "^3.10"

# nua-build-agent = "*"

cleez = "^0.1.9"
dictdiffer = "^0.9.0"
jinja2 = "^3.1.2"
json5 = "^0.9.11"
jsonschema = "^4.17.3"
pydantic = "^1.10.7"
pygithub = "^1.58.1"
snoop = "^0.4.3"
tabulate = "^0.9.0"
toml = "^0.10.2"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "^0.5.1"
nox = "^2023.4.22"

types-jsonschema = "^4.17.0.7"
types-tabulate = "^0.9.0.2"
types-toml = "^0.10.8.6"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*distutils package:DeprecationWarning",
    "ignore::DeprecationWarning",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------

[tool.ruff]
select = [
    "F",
    "E",
    "C90",
    "I",
    "UP",
    "N",
    "YTT",
    "B",
    "A",
    "C4",
    "ICN",
    "Q",
    "S",
    "BLE",
    "RET",
    "SIM",
    "TID",
    "RUF",
    "PLC", "PLE", "PLR", "PLW",
]
# Add later: "ANN", "ERA"...

exclude = [
    "src/cleez/testing.py",
#    ".tox",
#    ".nox",
#    "tests",
#    "sandbox",
#    "doc",
#    "scripts",
#    "tmp",
]

ignore = [
    # Fix these later
    "B904",
    "BLE001",
    "PLR0913",
    "PLR2004", # Magic value used in comparison
    # No need to fix
    "S101",  # Use of `assert` detected
    "SIM108", # Use ternary operator
    "A001",  # Shadowing ...
    "A002",  # Shadowing ...
    "A003",  # Shadowing ...
    "I001",  # Ruff not agreeing with isort
    "INP001", # File is part of an implicit namespace package
    # Irrelevant security issues
    "S101",
    "S603",
    "S605",
    "S701",
    # Esthetic issues I don't agree with
    "RET505",
    "PLC1901",
    #
]


[tool.pyright]
exclude = [
    '.tox',
    '.nox',
    'tests',
    'sandbox',
    'doc',
    'scripts',
    'tmp',
]
include = ["src"]

# pyright has issues with modules imported from a root __init__.py
reportPrivateImportUsage = false

# Temp
reportGeneralTypeIssues = false
reportMissingImports = false
reportOptionalSubscript = false

[tool.coverage.run]
omit = ["tests/*.py", "**/test*.py", "**/*test.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover',
    "if __name__ == '__main__':",
]
